--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "react-scripts": "0.7.0"
   },
   "dependencies": {
+    "body-parser": "^1.17.1",
     "express": "^4.14.0",
+    "nodemailer": "^4.0.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-router": "^3.0.2"
