--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://koochi10.github.io/webapp",
+  "homepage": "https://sidhantchadda.com",
   "devDependencies": {
     "gh-pages": "^1.1.0",
     "react-scripts": "0.7.0"
